[FEATURE] Project implementation and configuration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,17 @@ plugins {
     id 'com.google.devtools.ksp' version '1.7.0-1.0.6'
 }
 
+kotlin {
+    sourceSets {
+        debug {
+            kotlin.srcDir("build/generated/ksp/debug/kotlin")
+        }
+        release {
+            kotlin.srcDir("build/generated/ksp/release/kotlin")
+        }
+    }
+}
+
 android {
     namespace 'com.javadesl.news'
     compileSdk 33
@@ -17,7 +28,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -68,6 +79,7 @@ dependencies {
 // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
 
     // Hilt
@@ -86,10 +98,12 @@ dependencies {
     implementation "androidx.paging:paging-runtime:3.1.1"
     implementation "androidx.paging:paging-compose:1.0.0-alpha16"
 
-
     // Navigation
     implementation "io.github.raamcosta.compose-destinations:animations-core:$navigation_version"
     ksp "io.github.raamcosta.compose-destinations:ksp:$navigation_version"
+
+    //multidex
+    implementation "androidx.multidex:multidex:2.0.1"
 
 
 }
